--- a/cj.netos.bondbank.plugin.BDBKEngine/build.gradle
+++ b/cj.netos.bondbank.plugin.BDBKEngine/build.gradle
@@ -41,7 +41,7 @@ task copyRefembeds(type: Copy) {
 task copyReferences(type: Copy) {
     into 'src/cj/references'
     from(configurations.all) {
-        include 'cj.studio.backend.uc.stub-*.jar','cj.netos.fsbank.stub-*.jar'
+        include 'cj.netos.fsbank.stub-*.jar'
         //下面在执行uploadArchives方法时只执行删除缺不拷贝，因此注释掉
        // delete fileTree("src/cj/refembeds").matching {
        // 	include "cj.studio.orm.mongodb-*.jar"
